--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "template-typescript",
+  "name": "npm-pkg-export-all-issues-to-md",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,13 +16,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HiromiShikata/template-typescript.git"
+    "url": "git+https://github.com/HiromiShikata/npm-pkg-export-all-issues-to-md.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/HiromiShikata/template-typescript/issues"
+    "url": "https://github.com/HiromiShikata/npm-pkg-export-all-issues-to-md/issues"
   },
   "release": {
     "plugins": [
@@ -35,7 +35,7 @@
       "main"
     ]
   },
-  "homepage": "https://github.com/HiromiShikata/template-typescript#readme",
+  "homepage": "https://github.com/HiromiShikata/npm-pkg-export-all-issues-to-md#readme",
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/commit-analyzer": "^10.0.1",
