--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "build": "tsc -p ./tsconfig.build.json",
     "test": "jest"
   },
+  "bin": {
+    "export-all-issues-to-md": "./bin/npm-pkg-export-all-issues-to-md.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/HiromiShikata/npm-pkg-export-all-issues-to-md.git"
