--- a/.github/workflows/auto-commit.yml
+++ b/.github/workflows/auto-commit.yml
@@ -19,7 +19,7 @@ jobs:
       - run: npm run fmt && git --no-pager diff
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: 'style: re-format / npm run fmt'
+          commit_message: 'autogen: re-format / npm run fmt'
       - run: npm run build
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
